Changed the header block.

--- a/trx_train.ipynb
+++ b/trx_train.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Our Training for the TRX-HT</h1>\n",
-    "<br>\n",
-    "Josh Bourden - 200541050\n",
-    "<br>\n",
-    "Iqtier U. Ahammad - 201746187"
+    "<h1>Our Training for the TRX-HT</h1>"
    ]
   },
   {
